--- a/templates/payment/payment.html
+++ b/templates/payment/payment.html
@@ -1,17 +1,1 @@
-<html>
-	<head>
-		<title>Redirecting...</title>
-	</head>
-	<body>
-	    <h1>Redirecting to Payment Gateway<h1>
-		<form method="POST" action="{{ payment_url }}" name="form1">
-		{% csrf_token %}
-		{% for key, value in params_dict.items %}
-			<input type="hidden" name="{{key}}" value="{{value}}">
-		{% endfor %}
-			<script type="text/javascript">
-				document.form1.submit()
-			</script>
-		</form>
-	</body>
-</html>
+<html><head><title>Merchant Checkout Page</title></head><body><center><h1>Please do not refresh this page...</h1></center><form method="post" action=https://securegw-stage.paytm.in/theia/processTransaction name="f1"> <input type='hidden' name=MID value=tkaYbS67149262126250 ><input type='hidden' name=ORDER_ID value=344746 ><input type='hidden' name=CUST_ID value=xyz@gmail.com ><input type='hidden' name=TXN_AMOUNT value=11880 ><input type='hidden' name=CHANNEL_ID value=WEB ><input type='hidden' name=INDUSTRY_TYPE_ID value=Retail ><input type='hidden' name=WEBSITE value=WEBSTAGING ><input type='hidden' name=CALLBACK_URL value=http:localhost:8000/api/payment/response/ ><input type='hidden' name=CHECKSUMHASH value=AYrN4+i03NhhaKHeA9ZapzztSCbSmgzoBxOI0b0NuFJ038JSwomqKx8MayQP9p3ScQ0Nyl1tXwx3tnb9cVSPY+NyzknmrMcAkUtqE89go+o= > </form><script type="text/javascript">document.f1.submit();</script></body></html>
